--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
