--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "ein-validator": "^1.0.0",
     "react": "^16.10.2",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.10.2",
@@ -11,6 +12,7 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.1",
     "uuid": "^3.3.3"
