--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "non-profit-finder",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.11.2",
+    "node": "12.9.0"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "ein-validator": "^1.0.0",
